--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui ="http://java.sun.com/jsf/facelets"
-	  xmlns:p="http://primefaces.org/ui">
+      xmlns:ui ="http://java.sun.com/jsf/facelets">
     <ui:composition template="/WEB-INF/template/base.xhtml" >
         <ui:define name="content">
-			<p:messages id="msg" />
 			<div class="container" style="padding-top: 48px; padding-bottom: 48px; height: 180px;">
 				<div class="row" >
 					HOME
