--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -12,7 +12,7 @@
 						<div class="input-prepend">
 							<span class="add-on"><i class="icon-user" ></i></span>
 							<p:inputText id="username" value="#{signinManaged.username}" maxlength="64" />
-							<p:watermark for="username" value="Email or Username" />
+							<p:watermark for="username" value="Username" />
 						</div>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 				<div class="row">
 					<div class="controls">
 						<p:commandButton id="signin" value="SIGNIN"
-										 styleClass="btn btn-success" 
+										 styleClass="btn btn-success"
 										 action="#{signinManaged.authen}" update="msg" />
 					</div>
 				</div>
