--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -23,11 +23,13 @@
 									 onclick="window.location.href = '/bgile/fcard';" />
 				</div>
 
-				<div class="input-prepend" style="padding-left: 24px; float:left;">
-					<span class="add-on"><i class="icon-search" ></i></span>
-					<p:inputText id="filter" style="width: 480px;" ></p:inputText>
-					<p:watermark for="filter" value="กรองสตอรี่" ></p:watermark>
-				</div>
+				<ui:remove>
+					<div class="input-prepend" style="padding-left: 24px; float:left;">
+						<span class="add-on"><i class="icon-search" ></i></span>
+						<p:inputText id="filter" style="width: 480px;" ></p:inputText>
+						<p:watermark for="filter" value="กรองสตอรี่" ></p:watermark>
+					</div>
+				</ui:remove>
 			</div>
 		</ui:define>
         <ui:define name="content">
@@ -90,14 +92,14 @@
 			<p:remoteCommand id="refreshcmd" action="#{boardManaged.refresh}" name="refresh"
 							 update="dynamic_dashboard" />
 
-			<div class="row-fluid" style="padding-top: 6px; padding-bottom: 6px;">
+			<div class="row" style="padding-top: 6px; padding-bottom: 6px;">
 				<h4 style="width: 260px; text-align: left; float: left; color: black;">วางแผน</h4>
 				<h4 style="width: 260px; text-align: left; float: left; color: black;">กำลังทำ</h4>
 				<h4 style="width: 260px; text-align: left; float: left; color: black;">กำลังทดสอบ</h4>
 				<h4 style="width: 260px; text-align: left; float: left; color: black;">เสร็จ</h4>
 			</div>
 
-			<div class="row-fluid">
+			<div class="row">
 				<p:dashboard id="dynamic_dashboard" binding="#{boardManaged.dashboard}" >
 					<p:ajax event="reorder" listener="#{boardManaged.handleReorder}" update="growl"
 							oncomplete="refresh();" />
