v. 1.1.4-beta Fixed 2 defect
1. Can't login after login fail.
2. Board permission & public board for viewer

--- a/src/main/webapp/grant.xhtml
+++ b/src/main/webapp/grant.xhtml
@@ -53,7 +53,7 @@
 								<td>#{a.account.firstname} #{a.account.lastname}</td>
 								<td>
 								<p:selectOneButton value="#{a.permissionid}" >
-									<f:attribute  name="accountid" value="#{a.id}" />
+									<f:attribute  name="accountid" value="#{a.account.id}" />
 									<f:selectItem itemLabel="Read"  itemValue="R" />
 									<f:selectItem itemLabel="Write" itemValue="W" />
 									<f:selectItem itemLabel="Admin" itemValue="A" />
