--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -29,7 +29,7 @@
 				<div class="row">
 					<div class="controls">
 						<p:commandButton id="signin" value="SIGNIN" styleClass="btn btn-success"
-										 oncomplete="handleAjax(xhr, status, args);"
+										 ajax="false"
 										 action="#{signinManaged.authen}" update="msg" />
 					</div>
 				</div>
