--- a/src/main/webapp/board.xhtml
+++ b/src/main/webapp/board.xhtml
@@ -2,8 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui ="http://java.sun.com/jsf/facelets"
-	  xmlns:p="http://primefaces.org/ui">
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/WEB-INF/template/app.xhtml" >
+		<ui:remove>
+			<f:metadata>
+				<f:event type="preRenderView" listener="boardManaged.initial" />
+			</f:metadata>
+		</ui:remove>
 		<ui:define name="menubar">
 			<div class="controls">
 				<div style="float:left;">
