--- a/src/main/webapp/grant.xhtml
+++ b/src/main/webapp/grant.xhtml
@@ -10,7 +10,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="Back"
 									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href = '/bgile/dashboard';" />
+									 onclick="window.location.href = '#{pageContext.request.contextPath}/dashboard';" />
 				</div>
 			</div>
 		</ui:define>
