--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -9,7 +9,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กลับ"
 									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href = '#{pageContext.request.contextPath}dashboard';" />
+									 onclick="window.location.href = '#{request.contextPath}dashboard';" />
 				</div>
 			</div>
 		</ui:define>
