--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -10,7 +10,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="กระดาน"
 									 styleClass="btn btn-mini btn-info"
-									 onclick="window.location.href='#{pageContext.request.contextPath}/fboard';" />
+									 onclick="window.location.href='#{request.contextPath}/fboard';" />
 				</div>
 			</div>
 		</ui:define>
@@ -30,10 +30,10 @@
 					<ui:repeat var="b" value="#{dashboardManaged.boards}">
 						<tr>
 							<td></td>
-							<td>#{b.id}</td>
-							<td>#{b.boardname}</td>
-							<td>#{b.description}</td>
-							<td>#{b.created}</td>
+							<td>#{b.board.id}</td>
+							<td>#{b.board.boardname}</td>
+							<td>#{b.board.description}</td>
+							<td>#{b.board.created}</td>
 							<td>
 								<h:outputLink value="grant/#{b.id}"  style="padding-right: 24px;">
 									<i class="icon-group" style="font-size: 2em;"></i></h:outputLink>
@@ -48,15 +48,15 @@
 									<p:commandButton id="grantAccount" style="margin-right: 12px;"
 												 icon="ui-icon ui-icon-person"
 												 styleClass="btn btn-mini btn-info"
-												 onclick="window.location.href='#{pageContext.request.contextPath}/grant/#{b.id}';" />
+												 onclick="window.location.href='#{request.contextPath}/grant/#{b.id}';" />
 									<p:commandButton id="editProjet" style="margin-right: 12px;"
 													 icon="ui-icon ui-icon-disk"
 													 styleClass="btn btn-mini btn-info"
-													 onclick="window.location.href='#{pageContext.request.contextPath}/fboard/#{b.id}';" />
+													 onclick="window.location.href='#{request.contextPath}/fboard/#{b.id}';" />
 									<p:commandButton id="linkToBoard"
 													 icon="ui-icon ui-icon-arrowthick-1-e"
 													 styleClass="btn btn-mini btn-info"
-													 onclick="window.location.href='#{pageContext.request.contextPath}/board/#{b.id}';" />
+													 onclick="window.location.href='#{request.contextPath}/board/#{b.id}';" />
 								</ui:remove>
 							</td>
 						</tr>
