--- a/src/main/webapp/fcard.xhtml
+++ b/src/main/webapp/fcard.xhtml
@@ -10,7 +10,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กระดาน"
 								 styleClass="btn btn-mini btn-info"
-								 onclick="window.location.href='#{pageContext.request.contextPath}/board/#{fCardManaged.boardid}';" />
+								 onclick="window.location.href='#{request.contextPath}/board/#{fCardManaged.boardid}';" />
 				</div>
 			</div>
 		</ui:define>
