--- a/src/main/webapp/grant.xhtml
+++ b/src/main/webapp/grant.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui ="http://java.sun.com/jsf/facelets"
 	  xmlns:p="http://primefaces.org/ui"
-	  xmlns:f="http://java.sun.com/jsf/core">
+	  xmlns:f="http://java.sun.com/jsf/core"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html">
     <ui:composition template="/WEB-INF/template/app.xhtml" >
 		<ui:define name="menubar">
 			<div class="control" >
@@ -22,12 +23,12 @@
 						<div class="controls">
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-user"></i></span>
-								<p:autoComplete id="accountbox" value="#{grantManaged.accountname}"
-												completeMethod="#{grantManaged.findAccounts}" var="a"
+								<p:autoComplete id="accountbox" value="#{grant.accountname}"
+												completeMethod="#{grant.findAccounts}" var="a"
 												itemLabel="#{a.displayname}" itemValue="#{a}"
 												minQueryLength="4" converter="DefaultConverter" forceSelection="true" >
-									<f:attribute name="listArrtibute" value="#{grantManaged.accounts}" />
-									<p:ajax event="itemSelect" listener="#{grantManaged.handleSelect}"
+									<f:attribute name="listArrtibute" value="#{grant.accounts}" />
+									<p:ajax event="itemSelect" listener="#{grant.handleSelect}"
 											update="accountbox grants" />
 								</p:autoComplete>
 								<p:watermark for="accountbox" value="Name or Email" />
@@ -47,18 +48,23 @@
 						</tr>
 					</thead>
 					<tbody>
-						<ui:repeat var="a" value="#{grantManaged.grants}">
+						<ui:repeat var="a" value="#{grant.grants}">
 							<tr>
 								<td>#{a.account.username}</td>
-								<td>#{a.account.firstname} #{a.account.lastname}</td>
 								<td>
-								<p:selectOneButton value="#{a.permissionid}" >
-									<f:attribute  name="accountid" value="#{a.account.id}" />
-									<f:selectItem itemLabel="Read"  itemValue="R" />
-									<f:selectItem itemLabel="Write" itemValue="W" />
-									<f:selectItem itemLabel="Admin" itemValue="A" />
-									<p:ajax listener="#{grantManaged.changePermission}" />
-								</p:selectOneButton>
+									<h:outputText value="(Owner)" style="color: red;"
+												  rendered="#{a.permissionid == 'O'}" />
+									#{a.account.firstname} #{a.account.lastname}
+								</td>
+								<td>
+									<p:selectOneButton value="#{a.permissionid}"
+													   disabled="#{a.account.id == account.account.id}" >
+										<f:attribute  name="accountid" value="#{a.account.id}" />
+										<f:selectItem itemLabel="Read"  itemValue="R" />
+										<f:selectItem itemLabel="Write" itemValue="W" />
+										<f:selectItem itemLabel="Admin" itemValue="A" />
+										<p:ajax listener="#{grant.changePermission}" />
+									</p:selectOneButton>
 								</td>
 							</tr>
 						</ui:repeat>
