--- a/src/main/webapp/profile.xhtml
+++ b/src/main/webapp/profile.xhtml
@@ -74,7 +74,6 @@
 
 					<div class="row">
 						<h4>เปลี่ยนรหัส </h4>
-						<p:messages id="changepasswdmsg" showDetail="true" />
 					</div>
 
 					<div class="row">
@@ -103,7 +102,7 @@
 						<div class="controls">
 							<div style="float:right;">
 								<p:commandButton id="change" icon="ui-icon ui-icon-check" value="เปลี่ยนรหัสผ่าน"
-												 styleClass="btn btn-mini btn-success" update="changepasswdmsg"
+												 styleClass="btn btn-mini btn-success" update="msg"
 												 action="#{profileManaged.changepasswd}"/>
 							</div>
 						</div>
