--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,12 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui ="http://java.sun.com/jsf/facelets">
+      xmlns:ui ="http://java.sun.com/jsf/facelets"
+	  xmlns:p="http://primefaces.org/ui" >
     <ui:composition template="/WEB-INF/template/base.xhtml" >
         <ui:define name="content">
-			<div class="container" style="padding-top: 48px; padding-bottom: 48px; height: 180px;">
-				<div class="row" >
-					HOME
+			<style type="text/css">
+				.ui-panel {
+					padding: 0.0em;
+				}
+				.ui-panel .ui-panel-content {
+					padding-left: 4px;
+					text-align: left;
+				}
+				.ui-panel .ui-panel-footer {
+					padding: 0.2em 0.4em;
+				}
+				.ui-panel .ui-panel-titlebar {
+					padding: 0.2em 0em 0.2em;
+				}
+				.ui-corner-all {
+					-moz-border-radius: 0px;
+					-webkit-border-radius: 0px;
+					border-radius: 0px;
+				}
+				.ui-widget-header {
+					text-align: left;
+				}
+				.ui-panel-title {
+					padding-left: 4px;
+				}
+				.ui-panel, div.ui-state-hover {
+					width : 98%;
+					margin-bottom: 10px;
+				}
+				.ui-dashboard-column {
+					width :25%;
+				}
+				.ui-dashboard-header {
+					width :25%;
+				}
+				pre {
+					display: block;
+					padding: 0px;
+					margin: 0 0 0px;
+					font-size: 11px;
+					line-height: 24px;
+					word-break: break-all;
+					word-wrap: break-word;
+					white-space: pre;
+					white-space: pre-wrap;
+					background-color: white;
+					border: 0px solid #ccc;
+					border: 0px solid rgba(0, 0, 0, 0.15);
+					-webkit-border-radius: 0px;
+					-moz-border-radius: 0px;
+					border-radius: 0px;
+				}
+			</style>
+			<div class="row">
+				<div class="span12" style="padding: 6px 4% 6px 4%;" >
+				   <h4 style="width: 25%; text-align: left; float: left; color: black;">วางแผน</h4>
+				   <h4 style="width: 25%; text-align: left; float: left; color: black;">กำลังทำ</h4>
+				   <h4 style="width: 25%; text-align: left; float: left; color: black;">กำลังทดสอบ</h4>
+				   <h4 style="width: 25%; text-align: left; float: left; color: black;">เสร็จ</h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12" style="padding-left: 4%; padding-right: 4%;" >
+					<p:dashboard id="dynamic_dashboard" binding="#{homeManaged.dashboard}" disabled="true" />
 				</div>
 			</div>
         </ui:define>
