--- a/src/main/webapp/fcard.xhtml
+++ b/src/main/webapp/fcard.xhtml
@@ -10,7 +10,7 @@
 				<div style="float:left;">
 					<p:commandButton id="back" icon="ui-icon ui-icon-arrowthick-1-w" value="กระดาน"
 								 styleClass="btn btn-mini btn-info"
-								 onclick="window.location.href='#{request.contextPath}/board/#{fCardManaged.boardid}';" />
+								 onclick="window.location.href='#{request.contextPath}/board/#{fcard.boardid}';" />
 				</div>
 			</div>
 		</ui:define>
@@ -23,7 +23,7 @@
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-pushpin" ></i></span>
 								<p:inputText id="storyid" style="width: 480px;" disabled="true"
-											 value="#{fCardManaged.card.id}"/>
+											 value="#{fcard.card.id}"/>
 								<p:watermark for="storyid" value="CARD: " ></p:watermark>
 							</div>
 						</div>
@@ -34,7 +34,7 @@
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-pencil" ></i></span>
 								<p:inputText id="story" style="width: 480px;" maxlength="128"
-											 value="#{fCardManaged.card.story}"
+											 value="#{fcard.card.story}"
 											 requiredMessage="Mandatory Field." required="true">
 								</p:inputText>
 								<p:watermark for="story" value="รายละเอียดย่อ" />
@@ -51,7 +51,7 @@
 							<div class="input-prepend" style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<span class="add-on"><i class="icon-time" ></i></span>
 								<p:inputText id="estimate" style="width: 480px;" maxlength="2"
-											 value="#{fCardManaged.card.estimate}"
+											 value="#{fcard.card.estimate}"
 											 converterMessage="Please enter digits only." 
 											 requiredMessage="Mandatory Field." required="true">
 									<f:validateLength minimum="1" maximum="2" />
@@ -69,7 +69,7 @@
 						<div class="controls span6">
 							<div style="padding-bottom: 24px; padding-left: 24px; float:left;">
 								<p:inputTextarea id="description" style="width: 511px;" rows="6"
-												 value="#{fCardManaged.card.description}"/>
+												 value="#{fcard.card.description}"/>
 							</div>
 						</div>
 					</div>
@@ -80,7 +80,7 @@
 								<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
 									<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
 													 styleClass="btn btn-mini btn-danger"
-													 rendered="#{!fCardManaged.newCard}"
+													 rendered="#{!fcard.newCard}"
 													 onclick="confirmation.show();" />
 								</div>
 							</div>
@@ -88,7 +88,7 @@
 								<div style="float:right;">
 									<p:commandButton id="save" icon="ui-icon ui-icon-check" value="บันทึก"
 													 styleClass="btn btn-mini btn-success"
-													 action="#{fCardManaged.saveStory}"
+													 action="#{fcard.saveStory}"
 													 update="storyMsg estimateMsg" />
 								</div>
 							</div>
@@ -101,7 +101,7 @@
 							 header="Confirm Dialog" severity="alert" widgetVar="confirmation">
 
 				<p:commandButton id="confirm" value="Yes Sure" oncomplete="confirmation.hide()"
-								 action="#{fCardManaged.removeStory}" />
+								 action="#{fcard.removeStory}" />
 
 				<p:commandButton id="decline" value="Not Yet" onclick="confirmation.hide();"
 								 type="button" />
