--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -68,7 +68,7 @@
 			</div>
 			<div class="row">
 				<div class="span12" style="padding-left: 4%; padding-right: 4%;" >
-					<p:dashboard id="dynamic_dashboard" binding="#{homeManaged.dashboard}" disabled="true" />
+					<p:dashboard id="dynamic_dashboard" binding="#{home.dashboard}" disabled="true" />
 				</div>
 			</div>
         </ui:define>
